# Runik

./: .gitignore  Dockerfile  Makefile  README.md
app/: Makefile  app.dump  hello_world.c
binsa/: Cargo.toml
binsa/src/: lib.rs  riscv64.rs
binsa/src/arch/: mod.rs
linuxabi/: Cargo.toml
linuxabi/src/: generic.rs  lib.rs  time.rs
linuxabi/src/syscall_id/: mod.rs  x86_64.rs
runik/: Cargo.toml  Makefile  build.rs
runik/src/: app.rs  batch.rs  kernel_stack.rs  loader.rs  logging.rs  main.rs  sbi.rs
runik/src/arch/: mod.rs
runik/src/arch/riscv64/: entry_point.rs  paging.rs  syscall.rs  time.rs
runik/src/arch/riscv64/trap/: context.rs  mod.rs  trap.S
runik/src/mm/: addr.rs  addr_space.rs  frame.rs  kernel_heap.rs  mod.rs  page_table.rs
runik/src/plat/: mod.rs
runik/src/plat/qemu/: linker.ld  mod.rs
runik/src/sync/: mod.rs
runik/src/syscall/: fs.rs  mm.rs  mod.rs  process.rs
user/: Cargo.toml  Makefile
