[package]
name = "runik"
version = "0.1.0"
authors = ["Junyang Zhang <mail@junyang.me>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
log = "0.4.17"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
