[package]
name = "runik"
version = "0.1.0"
authors = ["Junyang Zhang <mail@junyang.me>"]
edition = "2021"

[dependencies]
linuxabi = { path = "../linuxabi" }
cfg-if = "1.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "2.1.0"
buddy_system_allocator = "0.9.0"
goblin = { version = "0.6.1", default-features = false, features = ["elf64"] }
xmas-elf = "0.9.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10.1"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
